Make API keys session-only

--- a/index.html
+++ b/index.html
@@ -34,10 +34,13 @@
       <div class="row">
         <label>API key</label>
         <div class="keybox">
-          <input id="api-key" type="password" placeholder="Paste key here" />
-          <button id="btn-save-key">Save</button>
+          <input id="api-key" type="password" placeholder="Paste key here (session only)" />
           <button id="btn-clear-key" class="ghost">Clear</button>
         </div>
+      </div>
+
+      <div class="banner" role="status">
+        Keys are session-only. They are not saved to disk or export files.
       </div>
 
       <div class="row">
